--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 
 *.c linguist-detectable=true
-*.verilog linguist-detectable=true 
+*.Dockerfile linguist-detectable=true 
 *.html linguist-detectable=false
 *.tcl linguist-detectable=false
 *.js linguist-detectable=false
