--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 
+Dockerfile.* linguist-language=Dockerfile
 *.c linguist-detectable=true
-*.Dockerfile linguist-detectable=false 
+Dockerfile linguist-detectable=false 
 *.html linguist-detectable=false
 *.tcl linguist-detectable=false
 *.js linguist-detectable=false
